@@ -2,6 +2,9 @@ These are the Release Notes leading-up to Revision 2.4.5 of netperf:
 
 Things changed in this release:
 
+*) Use vfork() on those platforms without fork(), courtesy of Matt
+   Waddel
+
 *) Track the bouncing interfaces that are linux processor affinity
 
 *) Fixes for Solaris sendfilev usage.
